fix(core): opens java.util and java.io to workaround issues with some libraries (#1669)